# zsconfuz-alt

./: .gitignore  CMakeLists.txt  README.md  zscfz-runcmd  zscfz2ninja.sh  zsconfuz-alt  zsconfuz-runcmd
examples/01/: zscfz.txt
examples/01/tests/: chk_lib  compiler_info
examples/02/: zscfz.txt
src/: cfz2ninja.cxx  ecatch.c  ppsec.c  ppsec.cxx  runcmd.c
